Arreglos variados de teclas, añadidos colores. Añadido a POM empaquetamiento en .deb